--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "scripts": {
     "build": "gulp build",
-    "start": "gulp default"
+    "start": "gulp default",
+    "deploy": "gulp deploy"
   },
   "devDependencies": {
     "autoprefixer": "^8.6.3",
@@ -16,6 +17,7 @@
     "del": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-csso": "^3.0.1",
+    "gulp-gh-pages": "^0.5.4",
     "gulp-imagemin": "^4.1.0",
     "gulp-plumber": "^1.2.0",
     "gulp-postcss": "^7.0.1",
